@@ -150,63 +150,67 @@ def test_iau_2015(conn):
 
 def test_iau_2015_gml(conn):
     xml_2015_1000 = """
-<gml:GeodeticCRS xmlns:gmx="http://www.isotc211.org/2005/gmx" xmlns:gmd="http://www.isotc211.org/2005/gmd"
-                 xmlns:gml="http://www.opengis.net/gml/3.2" xmlns:srv1="http://www.isotc211.org/2005/srv"
-                 xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                 xmlns:dqm="http://standards.iso.org/iso/19157/-2/dqm/1.0" xmlns:fra="http://www.cnig.gouv.fr/2005/fra"
-                 xmlns:gmi="http://standards.iso.org/iso/19115/-2/gmi/1.0" xmlns:gcol="http://www.isotc211.org/2005/gco"
-                 xmlns:gts="http://www.isotc211.org/2005/gts" gml:id="iau-crs-1000">
-    <gml:identifier codeSpace="IAU:2015">1000</gml:identifier>
-    <gml:name>Sun (2015) - Sphere / Ocentric</gml:name>
-    <gml:remarks>Source of IAU Coordinate systems: doi://10.1007/s10569-017-9805-5</gml:remarks>
-    <gml:ellipsoidalCS>
-        <gml:EllipsoidalCS gml:id="EllipsoidalCSNorthEast">
-            <gml:name>Ellipsoidal CS: North (°), East (°).</gml:name>
-            <gml:axis>
-                <gml:CoordinateSystemAxis uom="urn:ogc:def:uom:EPSG::9122" gml:id="GeodeticLatitude">
-                    <gml:name>Geodetic latitude</gml:name>
-                    <gml:axisAbbrev>φ</gml:axisAbbrev>
-                    <gml:axisDirection codeSpace="EPSG">north</gml:axisDirection>
-                    <gml:minimumValue>-90.0</gml:minimumValue>
-                    <gml:maximumValue>90.0</gml:maximumValue>
-                    <gml:rangeMeaning codeSpace="EPSG">exact</gml:rangeMeaning>
-                </gml:CoordinateSystemAxis>
-            </gml:axis>
-            <gml:axis>
-                <gml:CoordinateSystemAxis uom="urn:ogc:def:uom:EPSG::9122" gml:id="GeodeticLongitude">
-                    <gml:name>Geodetic longitude</gml:name>
-                    <gml:axisAbbrev>λ</gml:axisAbbrev>
-                    <gml:axisDirection codeSpace="EPSG">east</gml:axisDirection>
-                    <gml:minimumValue>-180.0</gml:minimumValue>
-                    <gml:maximumValue>180.0</gml:maximumValue>
-                    <gml:rangeMeaning codeSpace="EPSG">wraparound</gml:rangeMeaning>
-                </gml:CoordinateSystemAxis>
-            </gml:axis>
-        </gml:EllipsoidalCS>
-    </gml:ellipsoidalCS>
-    <gml:geodeticDatum>
-        <gml:GeodeticDatum gml:id="Sun2015Sphere">
-            <gml:name>Sun (2015) - Sphere</gml:name>
-            <gml:primeMeridian>
-                <gml:PrimeMeridian gml:id="ReferenceMeridian">
-                    <gml:name>Reference Meridian</gml:name>
-                    <gml:greenwichLongitude uom="urn:ogc:def:uom:EPSG::9102">0.0</gml:greenwichLongitude>
-                </gml:PrimeMeridian>
-            </gml:primeMeridian>
-            <gml:ellipsoid>
-                <gml:Ellipsoid gml:id="Sun2015Sphere-1">
-                    <gml:name>Sun (2015) - Sphere</gml:name>
-                    <gml:semiMajorAxis uom="urn:ogc:def:uom:EPSG::9001">6.957E8</gml:semiMajorAxis>
-                    <gml:secondDefiningParameter>
-                        <gml:SecondDefiningParameter>
-                            <gml:isSphere>true</gml:isSphere>
-                        </gml:SecondDefiningParameter>
-                    </gml:secondDefiningParameter>
-                </gml:Ellipsoid>
-            </gml:ellipsoid>
-        </gml:GeodeticDatum>
-    </gml:geodeticDatum>
+<gml:GeodeticCRS xmlns:gmx="http://www.isotc211.org/2005/gmx" xmlns:gmd="http://www.isotc211.org/2005/gmd" xmlns:gml="http://www.opengis.net/gml/3.2" xmlns:srv1="http://www.isotc211.org/2005/srv" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dqm="http://standards.iso.org/iso/19157/-2/dqm/1.0" xmlns:fra="http://www.cnig.gouv.fr/2005/fra" xmlns:gmi="http://standards.iso.org/iso/19115/-2/gmi/1.0" xmlns:gcol="http://www.isotc211.org/2005/gco" xmlns:gts="http://www.isotc211.org/2005/gts" gml:id="iau-crs-1000">
+  <gml:identifier codeSpace="IAU:2015">1000</gml:identifier>
+  <gml:name>Sun (2015) - Sphere / Ocentric</gml:name>
+  <gml:remarks>Source of IAU Coordinate systems: doi://10.1007/s10569-017-9805-5</gml:remarks>
+  <gml:scope>not known</gml:scope>
+  <gml:ellipsoidalCS>
+    <gml:EllipsoidalCS gml:id="EllipsoidalCSNorthEast">
+      <gml:identifier codeSpace="NAIF">urn:ogc:def:cs:NAIF:2015:10</gml:identifier>
+      <gml:name>Ellipsoidal CS: North (&#176;), East (&#176;).</gml:name>
+      <gml:axis>
+        <gml:CoordinateSystemAxis uom="urn:ogc:def:uom:EPSG::9122" gml:id="GeodeticLatitude">
+          <gml:identifier codeSpace="IOGP">urn:ogc:def:axis:EPSG::9901</gml:identifier>
+          <gml:name>Geodetic latitude</gml:name>
+          <gml:axisAbbrev>&#966;</gml:axisAbbrev>
+          <gml:axisDirection codeSpace="EPSG">north</gml:axisDirection>
+          <gml:minimumValue>-90.0</gml:minimumValue>
+          <gml:maximumValue>90.0</gml:maximumValue>
+          <gml:rangeMeaning codeSpace="EPSG">exact</gml:rangeMeaning>
+        </gml:CoordinateSystemAxis>
+      </gml:axis>
+      <gml:axis>
+        <gml:CoordinateSystemAxis uom="urn:ogc:def:uom:EPSG::9122" gml:id="GeodeticLongitude">
+          <gml:identifier codeSpace="IOGP">urn:ogc:def:axis:EPSG::9902</gml:identifier>
+          <gml:name>Geodetic longitude</gml:name>
+          <gml:axisAbbrev>&#955;</gml:axisAbbrev>
+          <gml:axisDirection codeSpace="EPSG">east</gml:axisDirection>
+          <gml:minimumValue>-180.0</gml:minimumValue>
+          <gml:maximumValue>180.0</gml:maximumValue>
+          <gml:rangeMeaning codeSpace="EPSG">wraparound</gml:rangeMeaning>
+        </gml:CoordinateSystemAxis>
+      </gml:axis>
+    </gml:EllipsoidalCS>
+  </gml:ellipsoidalCS>
+  <gml:geodeticDatum>
+    <gml:GeodeticDatum gml:id="Sun2015Sphere">
+      <gml:identifier codeSpace="NAIF">urn:ogc:def:datum:NAIF:2015:10</gml:identifier>
+      <gml:name>Sun (2015) - Sphere</gml:name>
+      <gml:scope>not known</gml:scope>
+      <gml:primeMeridian>
+        <gml:PrimeMeridian gml:id="ReferenceMeridian">
+          <gml:identifier codeSpace="NAIF">urn:ogc:def:meridian:NAIF:2015:10</gml:identifier>
+          <gml:name>Reference Meridian</gml:name>
+          <gml:greenwichLongitude uom="urn:ogc:def:uom:EPSG::9102">0.0</gml:greenwichLongitude>
+        </gml:PrimeMeridian>
+      </gml:primeMeridian>
+      <gml:ellipsoid>
+        <gml:Ellipsoid gml:id="Sun2015Sphere-1">
+          <gml:identifier codeSpace="NAIF">urn:ogc:def:ellipsoid:NAIF:2015:10</gml:identifier>
+          <gml:name>Sun (2015) - Sphere</gml:name>
+          <gml:semiMajorAxis uom="urn:ogc:def:uom:EPSG::9001">6.957E8</gml:semiMajorAxis>
+          <gml:secondDefiningParameter>
+            <gml:SecondDefiningParameter>
+              <gml:isSphere>true</gml:isSphere>
+            </gml:SecondDefiningParameter>
+          </gml:secondDefiningParameter>
+        </gml:Ellipsoid>
+      </gml:ellipsoid>
+    </gml:GeodeticDatum>
+  </gml:geodeticDatum>
 </gml:GeodeticCRS>
+
     """
     try:
         response = requests.get("http://localhost:8080/ws/IAU/2015/1000")
@@ -214,6 +218,30 @@ def test_iau_2015_gml(conn):
         content = response.content.decode("UTF-8")
         result = xmltodict.parse(content)
         assert result == xmltodict.parse(xml_2015_1000)
+    except requests.RequestException as e:
+        raise ValueError(f"Error occurred during request: {str(e)}")
+
+
+def test_gml_generation(conn):
+    gml_directory_path = os.environ.get("GML_PATH")
+    if gml_directory_path is None:
+        gml_directory_path = os.path.join("planet_crs_registry", "data", "gml")
+
+    try:
+        response = requests.get("http://localhost:8080/ws/IAU/2015")
+        response.raise_for_status()  # Raise an HTTPError for bad responses
+        content = response.content.decode("UTF-8")
+        result = xmltodict.parse(content)
+        wkts_list = result["ns0:identifiers"]["ns0:identifier"]
+
+        for wkt_url in wkts_list:
+            iau_parts = wkt_url.split("/")[-3:]
+            file_name = "_".join(iau_parts) + ".xml"
+            file_path = os.path.join(gml_directory_path, file_name)
+            if not os.path.isfile(file_path):
+                assert False
+        assert True
+
     except requests.RequestException as e:
         raise ValueError(f"Error occurred during request: {str(e)}")
 
